[NETBEANS-5828] : Resolved java-8 compatibility errors related to pattern-instance-of, switch expression/rule, records