@@ -490,7 +490,7 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
             java.util.List<Path> files;
             try (Stream<Path> s = Files.list(d)) {
-                files = (sortFiles == null ? s : s.sorted(sortFiles)).toList();
+                files = (sortFiles == null ? s : s.sorted(sortFiles)).collect(Collectors.toList());
             } catch (IOException ignore) {
                 return;
             }
@@ -789,8 +789,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
             return null;
         }
 
-        if (file instanceof PathFileObject pathFileObject) {
-            return pathFileObject.inferBinaryName(path);
+        if (file instanceof PathFileObject) {
+            return ((PathFileObject) file).inferBinaryName(path);
         } else
             throw new IllegalArgumentException(file.getClass().getName());
     }
@@ -799,8 +799,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     public boolean isSameFile(FileObject a, FileObject b) {
         nullCheck(a);
         nullCheck(b);
-        if (a instanceof PathFileObject pathFileObjectA && b instanceof PathFileObject pathFileObjectB)
-            return pathFileObjectA.isSameFile(pathFileObjectB);
+        if (a instanceof PathFileObject && b instanceof PathFileObject)
+            return ((PathFileObject) a).isSameFile((PathFileObject) b);
         return a.equals(b);
     }
 
@@ -907,8 +907,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
                 dir = getClassOutDir();
             } else {
                 String baseName = fileName.basename();
-                if (sibling != null && sibling instanceof PathFileObject pathFileObject) {
-                    return pathFileObject.getSibling(baseName);
+                if (sibling != null && sibling instanceof PathFileObject) {
+                    return ((PathFileObject) sibling).getSibling(baseName);
                 } else {
                     Path p = getPath(baseName);
                     Path real = fsInfo.getCanonicalFile(p);
@@ -942,8 +942,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
         Iterable<? extends File> files)
     {
         ArrayList<PathFileObject> result;
-        if (files instanceof Collection<?> collection)
-            result = new ArrayList<>(collection.size());
+        if (files instanceof Collection<?>)
+            result = new ArrayList<>(((Collection<?>)files).size());
         else
             result = new ArrayList<>();
         for (File f: files) {
@@ -1098,10 +1098,13 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
         @Override
         public boolean equals(Object o) {
-            return (o instanceof PathAndContainer pathAndContainer)
-                    && path.equals(pathAndContainer.path)
-                    && container.equals(pathAndContainer.container)
-                    && index == pathAndContainer.index;
+            if (o == null || !(o instanceof PathAndContainer)) {
+            return false;
+          }
+          PathAndContainer that = (PathAndContainer) o;
+          return path.equals(that.path)
+              && container.equals(that.container)
+              && index == this.index;
         }
 
         @Override
@@ -1143,9 +1146,9 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
     @Override @DefinedBy(Api.COMPILER)
     public Location getLocationForModule(Location location, JavaFileObject fo) throws IOException {
         checkModuleOrientedOrOutputLocation(location);
-        if (!(fo instanceof PathFileObject pathFileObject))
+        if (!(fo instanceof PathFileObject))
             return null;
-        Path p = Locations.normalize(pathFileObject.path);
+        Path p = Locations.normalize(((PathFileObject) fo).path);
             // need to find p in location
         return locations.getLocationForModule(location, p);
     }
@@ -1173,8 +1176,8 @@ public class JavacFileManager extends BaseFileManager implements StandardJavaFil
 
     @Override @DefinedBy(Api.COMPILER)
     public Path asPath(FileObject file) {
-        if (file instanceof PathFileObject pathFileObject) {
-            return pathFileObject.path;
+        if (file instanceof PathFileObject) {
+            return ((PathFileObject) file).path;
         } else
             throw new IllegalArgumentException(file.getName());
     }
